--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,6 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div style="padding-top:3rem;padding-bottom:3rem;display:flex;flex-direction:column;align-items:center;"><%= yield %></div>
   </body>
 </html>
